# operator-by-phone

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  entrypoint_beat.sh  entrypoint_celery.sh  pyproject.toml
src/apps/core/controllers/: health.py
src/apps/core/routes/: root.py
src/apps/operator_by_phone/: admin.py  apps.py  forms.py  models.py  tasks.py
src/apps/operator_by_phone/controllers/: api.py  view.py
src/apps/operator_by_phone/migrations/: 0001_initial.py
src/apps/operator_by_phone/routes/: api.py  view.py
src/apps/operator_by_phone/templates/operator_by_phone/: operator_by_phone_form.html
src/apps/operator_by_phone/utils/: base.py
src/config/: celery.py  settings.py
